# Kimera-VIO-ROS2

./: .gitignore  Dockerfile  LICENSE  README.md
install/: overlay.repos  underlay.repos  wrapper.repos
kimera_common/: CMakeLists.txt  kimera_common-extras.cmake  package.xml
kimera_common/cmake/: kimera_package.cmake
kimera_graph_msgs/: CMakeLists.txt  package.xml
kimera_graph_msgs/msg/: PoseGraph.msg  PoseGraphEdge.msg  PoseGraphNode.msg
kimera_graph_visualizer/: CMakeLists.txt  package.xml
kimera_graph_visualizer/include/kimera_graph_visualizer/: visualizer.hpp
kimera_graph_visualizer/launch/: posegraph_view.launch.xml
kimera_graph_visualizer/src/: visualizer.cpp  visualizer_node.cpp
kimera_vio_ros/: CMakeLists.txt  package.xml
kimera_vio_ros/include/kimera_vio_ros/components/: stereo_vio.hpp
kimera_vio_ros/include/kimera_vio_ros/interfaces/: backend_interface.hpp  base_interface.hpp  image_interface.hpp  imu_interface.hpp  stereo_interface.hpp  stereo_vio_interface.hpp
kimera_vio_ros/include/kimera_vio_ros/nodes/: stereo_vio.hpp
kimera_vio_ros/include/kimera_vio_ros/utils/: geometry.hpp
kimera_vio_ros/launch/: kimera_ros_realsense.launch.xml  kimera_vio_ros.launch.xml  realsense_ir.launch.xml
kimera_vio_ros/param/RealSense_IR/: regularVioParameters.yaml  trackerParameters.yaml
kimera_vio_ros/param/RealSense_IR/calibration/: calibration_UCSD_plumb_bob.yaml
kimera_vio_ros/params/RealSenseIR/: ImuParams.yaml  LeftCameraParams.yaml  RightCameraParams.yaml
kimera_vio_ros/params/RealSenseIR/tracker/: trackerParameters_stereo.yaml
kimera_vio_ros/src/: stereo_vio_node.cpp
kimera_vio_ros/src/components/: stereo_vio.cpp
kimera_vio_ros/src/interfaces/: backend_interface.cpp  base_interface.cpp  image_interface.cpp  imu_interface.cpp  stereo_interface.cpp  stereo_vio_interface.cpp
kimera_vio_ros/src/nodes/: stereo_vio.cpp
kimera_vio_ros/src/utils/: geometry.cpp
