<?xml version="1.0"?>
<package format="3">
  <name>kimera_graph_visualizer</name>
  <version>1.0.0</version>
  <description>The kimera_graph_visualizer package</description>

  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>kimera_common</depend>
  <depend>kimera_graph_msgs</depend>
  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
