<?xml version="1.0"?>
<package format="2">
  <name>kimera_vio_ros</name>
  <version>4.0.0</version>
  <description>KimeraVIO ROS Wrapper</description>

  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>
  <maintainer email="mabate@mit.edu">Marcus Abate</maintainer>
  <maintainer email="arosinol@mit.edu">Antoni Rosinol</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>kimera_common</depend>
  <depend>kimera_vio</depend>
  <depend>libboost-dev</depend>
  <depend>libgflags-dev</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
